; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_preset_job_init.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_hb_preset_job_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"Invalid title index (%d)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @hb_preset_job_init(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32* @hb_find_title_by_index(i32* %11, i32 %12)
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @hb_error(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %17)
  store i32* null, i32** %4, align 8
  br label %54

19:                                               ; preds = %3
  %20 = load i32*, i32** %8, align 8
  %21 = call i32* @hb_job_init(i32* %20)
  store i32* %21, i32** %9, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = call i32* @hb_job_to_dict(i32* %22)
  store i32* %23, i32** %10, align 8
  %24 = call i32 @hb_job_close(i32** %9)
  %25 = load i32*, i32** %7, align 8
  %26 = load i32*, i32** %10, align 8
  %27 = call i64 @hb_preset_apply_mux(i32* %25, i32* %26)
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %19
  br label %52

30:                                               ; preds = %19
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = call i64 @hb_preset_apply_video(i32* %31, i32* %32)
  %34 = icmp slt i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %30
  br label %52

36:                                               ; preds = %30
  %37 = load i32*, i32** %7, align 8
  %38 = load i32*, i32** %10, align 8
  %39 = call i64 @hb_preset_apply_filters(i32* %37, i32* %38)
  %40 = icmp slt i64 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %36
  br label %52

42:                                               ; preds = %36
  %43 = load i32*, i32** %5, align 8
  %44 = load i32, i32* %6, align 4
  %45 = load i32*, i32** %7, align 8
  %46 = load i32*, i32** %10, align 8
  %47 = call i64 @hb_preset_apply_title(i32* %43, i32 %44, i32* %45, i32* %46)
  %48 = icmp slt i64 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %42
  br label %52

50:                                               ; preds = %42
  %51 = load i32*, i32** %10, align 8
  store i32* %51, i32** %4, align 8
  br label %54

52:                                               ; preds = %49, %41, %35, %29
  %53 = call i32 @hb_value_free(i32** %10)
  store i32* null, i32** %4, align 8
  br label %54

54:                                               ; preds = %52, %50, %16
  %55 = load i32*, i32** %4, align 8
  ret i32* %55
}

declare dso_local i32* @hb_find_title_by_index(i32*, i32) #1

declare dso_local i32 @hb_error(i8*, i32) #1

declare dso_local i32* @hb_job_init(i32*) #1

declare dso_local i32* @hb_job_to_dict(i32*) #1

declare dso_local i32 @hb_job_close(i32**) #1

declare dso_local i64 @hb_preset_apply_mux(i32*, i32*) #1

declare dso_local i64 @hb_preset_apply_video(i32*, i32*) #1

declare dso_local i64 @hb_preset_apply_filters(i32*, i32*) #1

declare dso_local i64 @hb_preset_apply_title(i32*, i32, i32*, i32*) #1

declare dso_local i32 @hb_value_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
